[package]
name = "wlogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
twitch-irc = "4.0.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"

rocket = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "serve"]